# ObjectsQuaternionRotation

./: .gitignore  CMakeLists.txt  Quaternions.h  README.md  main.cpp  viewer
includes/: HelicalSurface.h  MobiusStrip.h  ModelLoader.h  Point3D.h  Quaternion.h  Render.h  SeashellSurface.h  SpiralSurface.h  WaveSurface.h
src/: HelicalSurface.cpp  MobiusStrip.cpp  ModelLoader.cpp  Point3D.cpp  Quaternion.cpp  Render.cpp  SeashellSurface.cpp  SpiralSurface.cpp  WaveSurface.cpp  main.cpp
